--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Weather Dashboard</title>
-    <!--Bootstrap CSS CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
-    <!-- Font Awesome CSS Icons (For cool glyphicons) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--Jumbotron for Title-->
     <header class="jumbotron container-fluid mt-2 text-center p-2" style="background-color:#404040 ;color: white;">
         <h1> <strong>Weather Dashboard</strong></h1>
     </header>
@@ -45,7 +42,7 @@
                         <p>UV index:<span class="current bg-danger rounded py-2 px-2 text-white" id="uv-index"></span></p> 
                     </div>
                 </div>
-                <!--Row for future data to be dumped here-->
+                <!--Row for 5 day forecast data to be dumped here-->
                 <section class="col-sm-12" id ="future-weather">
                     <h3>5-Day Forecast:</h3>
                     <div class="row text-light">
@@ -92,10 +89,10 @@
 				href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
 			/>
 
-    <!--jQuery JS-->
+
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
-    <!--Code to Jvascript File-->
+
     <script src="script.js"></script>
 </body>
 </html>
