Adding script from zoom

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Weather Dashboard</title>
   </head>
   <body>
@@ -80,13 +80,12 @@
                 </div>
                 <div class="d-inline-flex" id="forecast-container"></div>
               </div>
-              <img height="500px" src="./assets/images/weathermeme.jpeg" class="rounded float-right" alt="Weather meme">
             </main>
           </div>
         </div>
       </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
